test-cases/error/booking-unbalanced-txn.golden/error.ansi
Booking failed

[31mError:[0m invalid transaction
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m ../test-cases/error/booking-unbalanced-txn.beancount:7:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [31m╭[0m[31m─[0m[31m▶[0m[31m [0m[31m2[0m[31m0[0m[31m2[0m[31m3[0m[31m-[0m[31m0[0m[31m4[0m[31m-[0m[31m1[0m[31m0[0m[31m [0m[31m*[0m[31m [0m[31m"[0m[31mW[0m[31mI[0m[31mK[0m[31mI[0m[31mM[0m[31mE[0m[31mD[0m[31mI[0m[31mA[0m[31m"[0m[31m [0m[31m"[0m[31mW[0m[31mI[0m[31mK[0m[31mI[0m[31mM[0m[31mE[0m[31mD[0m[31mI[0m[31mA[0m[31m [0m[31m;[0m[31m"[0m
 [38;5;240m  ┆[0m [31m┆[0m   
 [38;5;246m9 │[0m [31m├[0m[31m─[0m[31m▶[0m[31m [0m[31m [0m[31m [0m[31mE[0m[31mx[0m[31mp[0m[31me[0m[31mn[0m[31ms[0m[31me[0m[31ms[0m[31m:[0m[31mD[0m[31mo[0m[31mn[0m[31ma[0m[31mt[0m[31mi[0m[31mo[0m[31mn[0m[31ms[0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m [0m[31m1[0m[31m5[0m[31m.[0m[31m0[0m[31m0[0m[31m [0m[31mN[0m[31mZ[0m[31mD[0m
 [38;5;240m  │[0m [31m│[0m                                                                                         
 [38;5;240m  │[0m [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m unbalanced transaction with residual -5.00 NZD
[38;5;246m───╯[0m

